--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
         </div>
     </nav>
 
-    <section class="min-h-screen flex items-center justify-center pt-16">
+    <section class="min-h-screen flex items-center justify-center pt-24 pb-10">
         <div class="text-center px-4 max-w-4xl mx-auto">
+            <div class="mb-8 relative inline-block">
+                <div class="absolute inset-0 bg-gradient-to-r from-cyan-500 to-blue-600 rounded-full blur-md opacity-50 -z-10"></div>
+                <img src="image.jpeg" alt="Mohamed Aziz Sakiss" class="w-40 h-40 md:w-48 md:h-48 rounded-full border-4 border-slate-800 object-cover mx-auto relative z-10 shadow-xl">
+            </div>
+
             <div class="mb-4 inline-block px-3 py-1 text-xs font-semibold text-cyan-400 bg-cyan-900/30 rounded-full border border-cyan-800">
                 Open to Opportunities in Germany & Tunisia
             </div>
@@ -38,7 +43,7 @@
                 Hi, I'm <span class="gradient-text">Mohamed Aziz Sakiss</span>
             </h1>
             <p class="text-xl md:text-2xl text-slate-400 mb-8 max-w-2xl mx-auto">
-                AI Engineering Student specializing in <span class="text-white">Computer Vision (YOLO)</span>, <span class="text-white">Big Data (PySpark)</span>, and <span class="text-white">Generative AI</span>.
+                AI Engineering Student specializing in <span class="text-white">Computer Vision (YOLOv11)</span>, <span class="text-white">Big Data (PySpark)</span>, and <span class="text-white">Generative AI</span>.
             </p>
             <div class="flex justify-center gap-4">
                 <a href="#projects" class="px-8 py-3 bg-cyan-600 hover:bg-cyan-500 text-white rounded-lg font-bold transition shadow-lg shadow-cyan-500/20">
@@ -51,7 +56,7 @@
         </div>
     </section>
 
-    <section id="projects" class="py-20">
+    <section id="projects" class="py-20 bg-slate-900/50">
         <div class="max-w-6xl mx-auto px-4">
             <h2 class="text-3xl font-bold mb-12 text-center">Featured Projects</h2>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -61,11 +66,12 @@
                         <div class="text-cyan-400 text-sm font-mono mb-2">Computer Vision</div>
                         <h3 class="text-xl font-bold mb-3">Autonomous Driving Detection</h3>
                         <p class="text-slate-400 text-sm mb-4">
-                            Object detection system using YOLOv8 trained on the BDD100K dataset. Capable of real-time vehicle and pedestrian tracking.
+                            Real-time perception system using <strong>YOLOv11m</strong> trained on BDD100K. Integrated <strong>SAHI</strong> (Slicing Aided Hyper Inference) to detect small distant objects with 84% Precision.
                         </p>
                         <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="px-2 py-1 bg-slate-700 text-xs rounded">YOLO</span>
-                            <span class="px-2 py-1 bg-slate-700 text-xs rounded">Python</span>
+                            <span class="px-2 py-1 bg-slate-700 text-xs rounded">YOLOv11</span>
+                            <span class="px-2 py-1 bg-slate-700 text-xs rounded">SAHI</span>
+                            <span class="px-2 py-1 bg-slate-700 text-xs rounded">PyTorch</span>
                         </div>
                     </div>
                 </div>
@@ -73,27 +79,74 @@
                 <div class="card bg-slate-800 rounded-xl overflow-hidden border border-slate-700 flex flex-col">
                     <div class="p-6 flex-1">
                         <div class="text-cyan-400 text-sm font-mono mb-2">Big Data & Security</div>
-                        <h3 class="text-xl font-bold mb-3">Fraud Detection System</h3>
+                        <h3 class="text-xl font-bold mb-3">Credit Card Fraud System</h3>
                         <p class="text-slate-400 text-sm mb-4">
-                            Machine Learning pipeline using PySpark to detect credit card fraud in large-scale financial datasets with high accuracy.
+                            Processed <strong>1 Million+ transactions</strong> using PySpark. Solved class imbalance (8.7% fraud) using custom class weighting, achieving AUC > 0.99.
                         </p>
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="px-2 py-1 bg-slate-700 text-xs rounded">PySpark</span>
                             <span class="px-2 py-1 bg-slate-700 text-xs rounded">MLlib</span>
+                            <span class="px-2 py-1 bg-slate-700 text-xs rounded">Big Data</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="card bg-slate-800 rounded-xl overflow-hidden border border-slate-700 flex flex-col">
                     <div class="p-6 flex-1">
-                        <div class="text-cyan-400 text-sm font-mono mb-2">Full Stack AI</div>
-                        <h3 class="text-xl font-bold mb-3">E-Commerce RAG Chatbot</h3>
+                        <div class="text-cyan-400 text-sm font-mono mb-2">Generative AI</div>
+                        <h3 class="text-xl font-bold mb-3">E-Commerce GenAI Agent</h3>
                         <p class="text-slate-400 text-sm mb-4">
-                            Integrated WooCommerce with Dolibarr ERP. Built a RAG-based chatbot to answer customer queries automatically.
+                            Autonomous agent bridging <strong>WooCommerce</strong> and <strong>Dolibarr ERP</strong>. Features "Tool Use" capabilities to perform real-time SQL inventory checks during customer conversations.
                         </p>
                         <div class="flex flex-wrap gap-2 mb-4">
+                            <span class="px-2 py-1 bg-slate-700 text-xs rounded">LLMs</span>
                             <span class="px-2 py-1 bg-slate-700 text-xs rounded">LangChain</span>
-                            <span class="px-2 py-1 bg-slate-700 text-xs rounded">Dolibarr</span>
+                            <span class="px-2 py-1 bg-slate-700 text-xs rounded">ERP Integration</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card bg-slate-800 rounded-xl overflow-hidden border border-slate-700 flex flex-col">
+                    <div class="p-6 flex-1">
+                        <div class="text-cyan-400 text-sm font-mono mb-2">Medical AI</div>
+                        <h3 class="text-xl font-bold mb-3">Brain Tumor Classification</h3>
+                        <p class="text-slate-400 text-sm mb-4">
+                            Ensemble Deep Learning architecture combining VGG16 & ResNet50. Implemented a custom <strong>Channel Attention Mechanism</strong> to detect Glioma/Meningioma tumors with high accuracy.
+                        </p>
+                        <div class="flex flex-wrap gap-2 mb-4">
+                            <span class="px-2 py-1 bg-slate-700 text-xs rounded">TensorFlow</span>
+                            <span class="px-2 py-1 bg-slate-700 text-xs rounded">Attention Mechanism</span>
+                            <span class="px-2 py-1 bg-slate-700 text-xs rounded">Medical Imaging</span>
+                        </div>
+                    </div>
+                </div>
+
+                 <div class="card bg-slate-800 rounded-xl overflow-hidden border border-slate-700 flex flex-col">
+                    <div class="p-6 flex-1">
+                        <div class="text-cyan-400 text-sm font-mono mb-2">IoT & Embedded AI</div>
+                        <h3 class="text-xl font-bold mb-3">Real-Time Fire Detection</h3>
+                        <p class="text-slate-400 text-sm mb-4">
+                            Embedded system deployed on <strong>Raspberry Pi 4</strong>. Uses a custom CNN (96% accuracy) combined with HSV filtering to eliminate false positives in low-light environments.
+                        </p>
+                        <div class="flex flex-wrap gap-2 mb-4">
+                            <span class="px-2 py-1 bg-slate-700 text-xs rounded">Edge AI</span>
+                            <span class="px-2 py-1 bg-slate-700 text-xs rounded">Raspberry Pi</span>
+                            <span class="px-2 py-1 bg-slate-700 text-xs rounded">OpenCV</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card bg-slate-800 rounded-xl overflow-hidden border border-slate-700 flex flex-col">
+                    <div class="p-6 flex-1">
+                        <div class="text-cyan-400 text-sm font-mono mb-2">NLP & Big Data</div>
+                        <h3 class="text-xl font-bold mb-3">Scalable Spam Detection</h3>
+                        <p class="text-slate-400 text-sm mb-4">
+                            End-to-end pipeline using <strong>PySpark</strong>. Implements TF-IDF feature extraction and Naive Bayes classification to handle massive text datasets efficiently.
+                        </p>
+                        <div class="flex flex-wrap gap-2 mb-4">
+                            <span class="px-2 py-1 bg-slate-700 text-xs rounded">NLP</span>
+                            <span class="px-2 py-1 bg-slate-700 text-xs rounded">PySpark</span>
+                            <span class="px-2 py-1 bg-slate-700 text-xs rounded">TF-IDF</span>
                         </div>
                     </div>
                 </div>
