--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="text-center px-4 max-w-4xl mx-auto">
             <div class="mb-8 relative inline-block">
                 <div class="absolute inset-0 bg-gradient-to-r from-cyan-500 to-blue-600 rounded-full blur-md opacity-50 -z-10"></div>
-                <img src="image.png" alt="Mohamed Aziz Sakiss" class="w-40 h-40 md:w-48 md:h-48 rounded-full border-4 border-slate-800 object-cover mx-auto relative z-10 shadow-xl">
+                <img src="image.jpeg" alt="Mohamed Aziz Sakiss" class="w-40 h-40 md:w-48 md:h-48 rounded-full border-4 border-slate-800 object-cover mx-auto relative z-10 shadow-xl">
             </div>
 
             <div class="mb-4 inline-block px-3 py-1 text-xs font-semibold text-cyan-400 bg-cyan-900/30 rounded-full border border-cyan-800">
