--- a/index.html
+++ b/index.html
@@ -37,23 +37,28 @@
             </div>
 
             <div class="mb-4 inline-block px-3 py-1 text-xs font-semibold text-cyan-400 bg-cyan-900/30 rounded-full border border-cyan-800">
-                Open to Opportunities in Germany & Tunisia
+                Open to Opportunities in Europe & Tunisia
             </div>
             <h1 class="text-5xl md:text-7xl font-bold mb-6 tracking-tight">
-                Hi, I'm <span class="gradient-text">Mohamed Aziz Sakiss</span>
+                Helo, I am <span class="gradient-text">Mohamed Aziz Sakiss</span>
             </h1>
             
             <p class="text-xl md:text-2xl text-slate-400 mb-8 max-w-3xl mx-auto leading-relaxed">
                 AI & Data Science Engineer dedicated to building scalable, production-ready intelligent systems. Expertise spans <span class="text-white font-medium">Advanced Computer Vision</span>, <span class="text-white font-medium">Distributed Big Data Architecture</span>, and <span class="text-white font-medium">Autonomous GenAI Agents</span>.
             </p>
             
-            <div class="flex justify-center gap-4">
-                <a href="#projects" class="px-8 py-3 bg-cyan-600 hover:bg-cyan-500 text-white rounded-lg font-bold transition shadow-lg shadow-cyan-500/20">
+            <div class="flex flex-col md:flex-row justify-center gap-4 items-center">
+                <a href="#projects" class="w-full md:w-auto px-8 py-3 bg-cyan-600 hover:bg-cyan-500 text-white rounded-lg font-bold transition shadow-lg shadow-cyan-500/20">
                     View Portfolio
                 </a>
-                <a href="mailto:contact@mohamedsakiss.me" class="px-8 py-3 bg-slate-800 hover:bg-slate-700 text-white rounded-lg font-bold transition border border-slate-700">
-                    Contact Me
-                </a>
+                <div class="flex gap-4">
+                    <a href="mailto:contact@mohamedsakiss.me" class="px-8 py-3 bg-slate-800 hover:bg-slate-700 text-white rounded-lg font-bold transition border border-slate-700">
+                        Contact Me
+                    </a>
+                    <a href="https://www.linkedin.com/in/mohamed-aziz-sakiss-58a35b319" target="_blank" class="px-4 py-3 bg-[#0077b5] hover:bg-[#006396] text-white rounded-lg font-bold transition shadow-lg flex items-center gap-2">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
@@ -154,19 +159,3 @@
                 </div>
 
             </div>
-        </div>
-    </section>
-
-    <section id="contact" class="py-20 bg-slate-900 border-t border-slate-800">
-        <div class="max-w-4xl mx-auto px-4 text-center">
-            <h2 class="text-3xl font-bold mb-6">Let's Work Together</h2>
-            <a href="mailto:contact@mohamedsakiss.me" class="inline-flex items-center gap-2 text-2xl font-bold text-cyan-400 hover:text-cyan-300 transition">
-                <i class="fa-regular fa-envelope"></i>
-                contact@mohamedsakiss.me
-            </a>
-            <p class="mt-12 text-sm text-slate-600">© 2025 Mohamed Aziz Sakiss</p>
-        </div>
-    </section>
-
-</body>
-</html>
