Fix typo in greeting from 'Helo' to 'Hello'

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 Open to Opportunities in Europe & Tunisia
             </div>
             <h1 class="text-5xl md:text-7xl font-bold mb-6 tracking-tight">
-                Helo, I am <span class="gradient-text">Mohamed Aziz Sakiss</span>
+                Hello, I am <span class="gradient-text">Mohamed Aziz Sakiss</span>
             </h1>
             
             <p class="text-xl md:text-2xl text-slate-400 mb-8 max-w-3xl mx-auto leading-relaxed">
