Fix HTML formatting for name display

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 Open to Opportunities in Germany & Tunisia
             </div>
             <h1 class="text-5xl md:text-7xl font-bold mb-6 tracking-tight">
-                Hi, I'm <span class="gradient-text">Mohamed Aziz Sakiss</span>
+                 <span class="gradient-text">Mohamed Aziz Sakiss</span>
             </h1>
             
             <p class="text-xl md:text-2xl text-slate-400 mb-8 max-w-3xl mx-auto leading-relaxed">
