Add video element and simplify description
Added a video element and removed redundant text.

--- a/index.html
+++ b/index.html
@@ -104,8 +104,16 @@
                         <div class="text-cyan-400 text-sm font-mono mb-2">Generative AI</div>
                         <h3 class="text-xl font-bold mb-3">E-Commerce GenAI Agent</h3>
                         <p class="text-slate-400 text-sm mb-4">
-                            Autonomous agent bridging <strong>WooCommerce</strong> and <strong>Dolibarr ERP</strong>. Features "Tool Use" capabilities to perform real-time SQL inventory checks during customer conversations.
+                            Autonomous agent bridging <strong>WooCommerce</strong> and <strong>Dolibarr ERP</strong>. Features "Tool Use" capabilities to perform real-time SQL inventory checks.
                         </p>
+                        
+                        <div class="mb-4 rounded-lg overflow-hidden border border-slate-600 shadow-lg">
+                            <video controls class="w-full bg-black">
+                                <source src="chatbot.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
+                        </div>
+
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="px-2 py-1 bg-slate-700 text-xs rounded">LLMs</span>
                             <span class="px-2 py-1 bg-slate-700 text-xs rounded">LangChain</span>
