Add video demonstration for Autonomous Driving Detection
Added a video element to showcase the real-time perception system results.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 Open to Opportunities in Germany & Tunisia
             </div>
             <h1 class="text-5xl md:text-7xl font-bold mb-6 tracking-tight">
-                 <span class="gradient-text">Mohamed Aziz Sakiss</span>
+                Hi, I'm <span class="gradient-text">Mohamed Aziz Sakiss</span>
             </h1>
             
             <p class="text-xl md:text-2xl text-slate-400 mb-8 max-w-3xl mx-auto leading-relaxed">
@@ -76,6 +76,14 @@
                         <p class="text-slate-400 text-sm mb-4">
                             Real-time perception system using <strong>YOLOv11m</strong> trained on BDD100K. Integrated <strong>SAHI</strong> (Slicing Aided Hyper Inference) to detect small distant objects with 84% Precision.
                         </p>
+                        
+                        <div class="mb-4 rounded-lg overflow-hidden border border-slate-600 shadow-lg">
+                            <video controls class="w-full bg-black">
+                                <source src="sahi_test_result.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
+                        </div>
+
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="px-2 py-1 bg-slate-700 text-xs rounded">YOLOv11</span>
                             <span class="px-2 py-1 bg-slate-700 text-xs rounded">SAHI</span>
