--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             </div>
 
             <div class="mb-4 inline-block px-3 py-1 text-xs font-semibold text-cyan-400 bg-cyan-900/30 rounded-full border border-cyan-800">
-                Open to Opportunities in Germany & Tunisia
+                Open to Opportunities in Europe & Tunisia
             </div>
             <h1 class="text-5xl md:text-7xl font-bold mb-6 tracking-tight">
-                Hi, I'm <span class="gradient-text">Mohamed Aziz Sakiss</span>
+               <span class="gradient-text">Mohamed Aziz Sakiss</span>
             </h1>
             
             <p class="text-xl md:text-2xl text-slate-400 mb-8 max-w-3xl mx-auto leading-relaxed">
