--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 Open to Opportunities in Europe & Tunisia
             </div>
             <h1 class="text-5xl md:text-7xl font-bold mb-6 tracking-tight">
-               <span class="gradient-text">Mohamed Aziz Sakiss</span>
+                 <span class="gradient-text">Mohamed Aziz Sakiss</span>
             </h1>
             
             <p class="text-xl md:text-2xl text-slate-400 mb-8 max-w-3xl mx-auto leading-relaxed">
@@ -58,6 +58,9 @@
                     </a>
                     <a href="https://www.linkedin.com/in/mohamed-aziz-sakiss-58a35b319" target="_blank" class="px-4 py-3 bg-[#0077b5] hover:bg-[#006396] text-white rounded-lg font-bold transition shadow-lg flex items-center gap-2">
                         <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                    <a href="https://github.com/mohamedsakiss" target="_blank" class="px-4 py-3 bg-[#24292e] hover:bg-[#1b1f23] text-white rounded-lg font-bold transition shadow-lg flex items-center gap-2">
+                        <i class="fa-brands fa-github"></i>
                     </a>
                 </div>
             </div>
@@ -228,6 +231,11 @@
                 <a href="https://www.linkedin.com/in/mohamed-aziz-sakiss-58a35b319" target="_blank" class="inline-flex items-center gap-2 text-xl font-bold text-slate-300 hover:text-[#0077b5] transition">
                     <i class="fa-brands fa-linkedin"></i>
                     LinkedIn Profile
+                </a>
+                <span class="hidden md:block text-slate-600">|</span>
+                <a href="https://github.com/mohamedsakiss" target="_blank" class="inline-flex items-center gap-2 text-xl font-bold text-slate-300 hover:text-white transition">
+                    <i class="fa-brands fa-github"></i>
+                    GitHub Profile
                 </a>
             </div>
             <p class="mt-12 text-sm text-slate-600">© 2025 Mohamed Aziz Sakiss</p>
