--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <a href="https://www.linkedin.com/in/mohamed-aziz-sakiss-58a35b319" target="_blank" class="px-4 py-3 bg-[#0077b5] hover:bg-[#006396] text-white rounded-lg font-bold transition shadow-lg flex items-center gap-2">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
-                    <a href="https://github.com/mohamedsakiss" target="_blank" class="px-4 py-3 bg-[#24292e] hover:bg-[#1b1f23] text-white rounded-lg font-bold transition shadow-lg flex items-center gap-2">
+                    <a href="https://github.com/mohamedazizsakiss" target="_blank" class="px-4 py-3 bg-[#24292e] hover:bg-[#1b1f23] text-white rounded-lg font-bold transition shadow-lg flex items-center gap-2">
                         <i class="fa-brands fa-github"></i>
                     </a>
                 </div>
@@ -233,7 +233,7 @@
                     LinkedIn Profile
                 </a>
                 <span class="hidden md:block text-slate-600">|</span>
-                <a href="https://github.com/mohamedsakiss" target="_blank" class="inline-flex items-center gap-2 text-xl font-bold text-slate-300 hover:text-white transition">
+                <a href="https://github.com/mohamedazizsakiss" target="_blank" class="inline-flex items-center gap-2 text-xl font-bold text-slate-300 hover:text-white transition">
                     <i class="fa-brands fa-github"></i>
                     GitHub Profile
                 </a>
